fix(Tabs, Slider): drag and clipping improvements

--- a/packages/reshaped/src/components/Tabs/Tabs.module.css
+++ b/packages/reshaped/src/components/Tabs/Tabs.module.css
@@ -415,8 +415,8 @@
 	& .listItem {
 		flex-grow: 1;
 		flex-basis: 0;
+		min-width: 0;
 		margin: 0;
-		overflow: hidden;
 	}
 
 	& .buttonText {
